ingress-controller/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: tomcat-service
    http:
      paths:
      - path: /ROOT
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 80
      - path: /CUSTOM
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port:
              number: 80
